fixing jump

--- a/index.css
+++ b/index.css
@@ -15,7 +15,7 @@
 #block {
     width: 50px;
     height: 500px;
-    background-color: #000;
+    background-color: green;
     position: relative;
     left: 400px;
     animation: block 2.1s infinite linear;
